--- a/index.html
+++ b/index.html
@@ -6,107 +6,87 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f6f9;
-      margin: 0;
-      padding: 0;
+      margin: 40px;
     }
-
-    .container {
-      max-width: 600px;
-      margin: 40px auto;
-      background-color: #e3f2fd;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-
-    .logo {
-      text-align: center;
+    #logo {
+      width: 200px;
       margin-bottom: 20px;
     }
-
-    .logo img {
-      max-height: 80px;
+    .hidden {
+      display: none;
     }
-
-    h2 {
-      text-align: center;
-      color: #1565c0;
-    }
-
-    label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-      color: #0d47a1;
-    }
-
-    input {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border: 1px solid #90caf9;
-      border-radius: 6px;
-    }
-
     button {
-      margin-top: 20px;
-      padding: 12px 20px;
-      background-color: #1976d2;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
+      margin: 10px 0;
+      padding: 10px 20px;
       font-size: 16px;
     }
-
-    .oculto {
-      display: none;
+    textarea {
+      width: 100%;
+      height: 150px;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Carátula -->
-  <div class="container" id="caratula">
-    <div class="logo">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/1024px-React-icon.svg.png" alt="Logo Institucional">
-    </div>
-    <h2>Captura de Servicios</h2>
-    <label for="telefonistaInicio">Nombre del Telefonista</label>
-    <input type="text" id="telefonistaInicio">
-    <button onclick="iniciarTurno()">Iniciar Turno</button>
+  <!-- Logo institucional -->
+  <img id="logo" src="logo_institucional.png" alt="Logo Institucional">
+
+  <!-- Carátula de inicio de turno -->
+  <div id="caratula">
+    <h2>Inicio de Turno</h2>
+    <label>Nombre del capturista:</label><br>
+    <input type="text" id="capturista"><br><br>
+    <label>Hora de inicio:</label><br>
+    <input type="text" id="horaInicio" readonly><br><br>
+    <button onclick="mostrarFormulario()">Captura de servicio</button>
   </div>
 
-  <!-- Formulario -->
-  <div class="container oculto" id="formulario">
-    <h2>Formulario de Captura</h2>
-    <label for="telefonista">Telefonista</label>
-    <input type="text" id="telefonista" readonly>
+  <!-- Formulario de captura -->
+  <div id="formulario" class="hidden">
+    <h2>Formulario de Servicio</h2>
+    <label>Servicio:</label><br>
+    <input type="text" id="servicio"><br><br>
+    <label>Responsable:</label><br>
+    <input type="text" id="responsable"><br><br>
+    <label>Fecha:</label><br>
+    <input type="date" id="fecha"><br><br>
+    <label>Observaciones:</label><br>
+    <textarea id="observaciones"></textarea><br>
+    <button onclick="generarTexto()">Enviar</button>
 
-    <label for="fecha">Fecha</label>
-    <input type="date" id="fecha">
-
-    <label for="hora">Hora</label>
-    <input type="time" id="hora">
+    <!-- Área para copiar texto -->
+    <textarea id="resultado" readonly></textarea>
   </div>
 
   <script>
-    function iniciarTurno() {
-      const nombre = document.getElementById("telefonistaInicio").value.trim();
-      if (!nombre) {
-        alert("⚠️ Por favor ingresa tu nombre.");
-        return;
-      }
+    // Mostrar hora actual en carátula
+    document.getElementById('horaInicio').value = new Date().toLocaleTimeString();
 
-      document.getElementById("telefonista").value = nombre;
+    function mostrarFormulario() {
+      document.getElementById('caratula').classList.add('hidden');
+      document.getElementById('formulario').classList.remove('hidden');
+    }
 
-      const ahora = new Date();
-      document.getElementById("fecha").value = ahora.toISOString().slice(0,10);
-      document.getElementById("hora").value = ahora.toTimeString().slice(0,5);
+    function generarTexto() {
+      const capturista = document.getElementById('capturista').value.trim();
+      const servicio = document.getElementById('servicio').value.trim();
+      const responsable = document.getElementById('responsable').value.trim();
+      const fecha = document.getElementById('fecha').value;
+      const observaciones = document.getElementById('observaciones').value.trim();
 
-      document.getElementById("caratula").classList.add("oculto");
-      document.getElementById("formulario").classList.remove("oculto");
+      const texto = 
+`Captura de Servicio
+Capturista: ${capturista}
+Servicio: ${servicio}
+Responsable: ${responsable}
+Fecha: ${fecha}
+Observaciones: ${observaciones}`;
+
+      const resultado = document.getElementById('resultado');
+      resultado.value = texto;
+      resultado.select();
+      document.execCommand('copy');
     }
   </script>
 
